# CogniHire

./: .env  .gitignore  README.md  asr_wrapper.py  backend_server.py  check_models.py  consolidate_transcripts.py  evaluation.py  evaluation_helpers.py  feature_extractor.py  ingest.py  interview_manager.py  main.py  package-lock.json  package.json  question_generator.py
Documents/: Demo link.txt
Doucuments/: wastefile
Evaluation_final/: dual_manifold.py  pyproject.toml
Evaluation_final/cli/: airf_cli.py
Evaluation_final/data/templates/: report_ultra_premium.tex
Evaluation_final/examples/: cv.json  questions.json  role_machine_learning.json
Evaluation_final/src/airf/: llm_eval.py  llm_interface.py  report_generator.py
Frontend/: package-lock.json  package.json  tailwimd.config.js
audio_analysis_ingest/: response_20251112_152331_processed_metadata.json  response_20251112_152418_processed_metadata.json  response_20251112_152421_processed_metadata.json  response_20251112_152423_processed_metadata.json  response_20251112_152426_processed_metadata.json  response_20251112_152434_processed_metadata.json  response_20251112_152439_processed_metadata.json  response_20251112_152444_processed_metadata.json  response_20251112_152450_processed_metadata.json  response_20251112_152500_processed_metadata.json  response_20251112_152533_processed_metadata.json  response_20251112_152539_processed_metadata.json  response_20251112_152555_processed_metadata.json  response_20251112_152558_processed_metadata.json  response_20251112_152602_processed_metadata.json  (+216 more)
src/: generator.py  (+5 more)
(+859 files in other folders)
