[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "airf-eval-engine"
version = "1.0.0"
description = "AIRF LLM Evaluation Engine"
authors = [
    {name="AIRF Team", email="contact@airf.com"}
]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "numpy>=1.23",
    "pydantic>=2.5",
    "requests>=2.31",
    "PyYAML>=6.0",
    "matplotlib>=3.8",
    "fastapi>=0.110",
    "uvicorn>=0.26",
    "jinja2>=3.1"
]

[project.scripts]
airf = "cli.airf_cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["airf*"]

[tool.setuptools.package-data]
"airf" = ["*.json", "*.tex", "*.png", "*.yaml"]
